--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@iqbuild"
       - run: npm ci
       - run: npm run prepublish
 
@@ -26,7 +28,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://registry.npmjs.org/
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@iqbuild"
       - run: npm ci
       - run: npm publish
         env:
